--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
   <groupId>org.freedesktop.appstream</groupId>
   <artifactId>appstream-appdata</artifactId>
   <version>0.2.0</version>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <packaging>jar</packaging>
 
   <name>appstream-appdata</name>
@@ -17,13 +29,20 @@
     <java.version>1.8</java.version>
   </properties>
 
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.9.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
