--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>org.freedesktop.appstream</groupId>
   <artifactId>appstream-appdata</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0-SNAPSHOT</version>
   <build>
     <plugins>
       <plugin>
